feat: initial implementation of narrator layer
